--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <h2>Info</h2>
             </div>
             <div class="info-text">
-              <p>Project "Aurelia" is creating by Hellgrim, ukrainian artist, writer, musician. The idea of steamunk world came to him in 2018, and is developing until today.</p>
+              <p>Project "Aurelia" is creating by Hellgrim, ukrainian artist, writer, musician. The idea of steampunk world came to him in 2018, and is developing until today.</p>
               <p>The story has so many changes, that it starts like fantasy magic world and end up in science version.)</p>
             </div>
           </div>
